--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -23,7 +23,11 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
+
+        apt-get install gcc
+        pip install -r requirements.txt
+
+        python setup.py build_ext --inplace
     - name: Test with pytest
       run: |
         pytest
