--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -24,7 +24,7 @@ jobs:
       run: |
         python -m pip install --upgrade pip
 
-        apt-get install gcc
+        sudo apt-get install gcc
         pip install -r requirements.txt
 
         python setup.py build_ext --inplace
