--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -23,8 +23,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-
-        sudo apt-get install gcc
+        pip install wheels
         pip install -r requirements.txt
 
         python setup.py build_ext --inplace
