--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -23,7 +23,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install wheels
+        pip install wheel
         pip install -r requirements.txt
 
         python setup.py build_ext --inplace
