--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -27,4 +27,4 @@ jobs:
         python setup.py build_ext --inplace
     - name: Test with pytest
       run: |
-        python -m pytest
+        python -m pytest tests/
