--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -23,8 +23,7 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
-        pip install -r requirements.txt
-        python setup.py build_ext --inplace
+        pip install .
     - name: Test with pytest
       run: |
-        python -m pytest tests/
+        pytest
