--- a/.github/workflows/testing.yml
+++ b/.github/workflows/testing.yml
@@ -23,7 +23,11 @@ jobs:
     - name: Install dependencies
       run: |
         python -m pip install --upgrade pip
+        python -m pip install flake8
         pip install .
     - name: Test with pytest
       run: |
         pytest
+    - name: Lint with flake8
+      run: |
+        flake8 .
